--- a/Lec_3/Wallet/web3-wallet/package.json
+++ b/Lec_3/Wallet/web3-wallet/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.95.2",
+    "alchemy-sdk": "^3.4.1",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tweetnacl": "^1.0.3",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "web3": "^4.11.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
